# Portfolio

./: app.js  index.html  style.css
app/: README.md
app/src/main/: CMakeLists.txt
app/web/: index.html  tsconfig.json
app/web/src/: index.ts
app/web/src/main/java/com/example/edgeapp/: GLRenderer.kt  ImageUtils.kt  MainActivity.kt
web/: index.html
web/src/: index.ts
